notes/day3/ingress/service.yaml
apiVersion: v1
kind: Service
metadata:
 name: devservice
spec:
 type: ClusterIP
 selector:
  name: devpod
 ports:
   - protocol: TCP
     port: 8080
     targetPort: 3000
